--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ elemento inline não aceita margin auto
 elemento inline aceita ser centralizado com text-align se colocado no elemento pai*/
 
 #container {
-  width: 360px;
+  max-width: 588px;
+  width: 100%;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
