--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ footer {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
   
-  :light {
+  .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
